Fixed deprecated methods by adding serialVersionUID to serializable classes and replaced 'Runtime' with 'ProcessBuilder'